show SubNavigation and MiniToc on mobile The SubHeader was displayed on the page. The behavior of MiniToc in the mobile has been changed, and the element is now displayed on the page (also correctly)

--- a/src/components/DocLayout/DocLayout.scss
+++ b/src/components/DocLayout/DocLayout.scss
@@ -82,7 +82,16 @@
         flex-direction: column-reverse;
 
         &__right {
-            display: none;
+            // display: none;
+            position: sticky;
+            top: 63px; // TODO: calc with header height
+            left: 0;
+
+            height: fit-content;
+            width: fit-content;
+            padding: 0;
+
+            background: #FFF; // TODO: var bg
         }
 
         &__left {
