--- a/src/components/DocPage/DocPage.scss
+++ b/src/components/DocPage/DocPage.scss
@@ -27,6 +27,22 @@ $importantBackgroundColor: rgba(235, 50, 38, 0.08);
 
         @include text-size(body-1);
 
+        @media (max-width: map-get($screenBreakpoints, 'md') - 1) {
+            position: relative;
+            top: 0;
+
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+
+            box-sizing: border-box;
+            width: 100vw;
+            padding: 12px 16px 16px 16px;
+
+            background: var(--g-color-base-background, #FFF);
+            box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.15);
+        }
+
         @media screen and (min-width: 1280px) {
             & {
                 width: 200px;
