--- a/src/components/SubNavigation/subnavigation.scss
+++ b/src/components/SubNavigation/subnavigation.scss
@@ -1,6 +1,6 @@
-@import '../../../../src/styles/variables';
-@import '../../../../src/styles/mixins';
-@import "../../../../src/themes/common/index.scss";
+@import "../../styles/variables";
+@import "../../styles/mixins";
+@import "../../themes/common/index.scss";
 
 .dc-subnavigation {
     display: flex;
@@ -11,8 +11,9 @@
 
     gap: 4px;
 
-     background: #FFFFFF; // !TEMP
-    border-bottom: 1px solid var(--g-color-line-brand, #0000001A);
+    background: #FFFFFF; // !TEMP
+    // border-bottom: 1px solid var(--g-color-line-brand, #0000001A);
+    border-bottom: 1px solid var(--g-color-private-black-100, #0000001A);
 
     &__left {
         flex: 1 0 0;
@@ -54,9 +55,9 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    padding: 12px 16px 16px 16px;
 
     width: 100vw;
-    padding: 12px 16px 16px 16px;
     box-sizing: border-box;
 
     background: var(--g-color-base-background, #FFF);
